# ChangeLog for gnome-base/libbonoboui
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.168 2009/03/06 15:36:47 ranger Exp $

  06 Mar 2009; Brent Baude <ranger@gentoo.org> libbonoboui-2.24.0.ebuild:
  Marking libbonoboui-2.24.0 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> libbonoboui-2.24.0.ebuild:
  Marking libbonoboui-2.24.0 ppc64 stable for bug 260063

  13 Nov 2008; Brent Baude <ranger@gentoo.org> libbonoboui-2.22.0.ebuild:
  Marking libbonoboui-2.22.0 ppc64 stable for bug 236971

*libbonoboui-2.24.0 (04 Oct 2008)

  04 Oct 2008; Mart Raudsepp <leio@gentoo.org> +libbonoboui-2.24.0.ebuild:
  New version; super/hyper/meta support in bonobo keybindings, code cleanups
  and gnome-vfs dependency removal

  25 Sep 2008; Jeroen Roovers <jer@gentoo.org> libbonoboui-2.22.0.ebuild:
  Stable for HPPA (bug #236971).

  12 Aug 2008; Raúl Porcel <armin76@gentoo.org> libbonoboui-2.22.0.ebuild:
  alpha/ia64/sparc stable wrt #229709

  10 Aug 2008; Markus Meier <maekke@gentoo.org> libbonoboui-2.22.0.ebuild:
  x86 stable, bug #229709

  31 Jul 2008; Gilles Dartiguelongue <eva@gentoo.org>
  libbonoboui-2.22.0.ebuild:
  artificially raise libbonobo requirement to avoid bugs similar to bug
  #229611.

  30 Jul 2008; Brent Baude <ranger@gentoo.org> libbonoboui-2.22.0.ebuild:
  Marking libbonoboui-2.22.0 ppc stable for bug 229709

  26 Jul 2008; Olivier Crête <tester@gentoo.org> libbonoboui-2.22.0.ebuild:
  Stable on amd64, bug #229709

  08 Jun 2008; Gilles Dartiguelongue <eva@gentoo.org>
  -libbonoboui-2.18.0.ebuild:
  clean up old revisions.

*libbonoboui-2.22.0 (22 Mar 2008)

  22 Mar 2008; Gilles Dartiguelongue <eva@gentoo.org>
  +libbonoboui-2.22.0.ebuild:
  New version for GNOME-2.22. Various small fixes and translation updates.

  29 Nov 2007; Jeroen Roovers <jer@gentoo.org> libbonoboui-2.20.0.ebuild:
  Stable for HPPA (bug #199740).
