@@ -1,8 +1,10 @@
 DIST libbonoboui-2.20.0.tar.bz2 991509 RMD160 d22f37457de3bd572f53dec97a3c7205e929ec50 SHA1 0f28da17b5d65c6b0cf912005a3f0b7af29c18b2 SHA256 e6958e88039a9ef409ad8e90f78d65c0171e22ee0927f07790eaf6ede722a838
 DIST libbonoboui-2.22.0.tar.bz2 1006030 RMD160 77bee2de7e4eff77885d68eb717df188cc62b1ca SHA1 48fcf81966b839b328ab63bae4ee128246eb0a63 SHA256 a1f2cc830a67cf02ea66812624d92f369b7d9e0231dc05ee1d0a0374b7706926
 DIST libbonoboui-2.24.0.tar.bz2 988715 RMD160 e55c266c6f3b21b9267e2986d013df1538b5cc01 SHA1 6df7805b08a17d37cb0025a63afc697d7d547eea SHA256 1274822cc0cc519755b35148bedeacd969504393a5003ca4d99977a92518f61b
-EBUILD libbonoboui-2.20.0.ebuild 1128 RMD160 9ca372c64cd20fa94b8dbf8d5d8c2113c0ea94f9 SHA1 3ec19fc5baccabe69054f773636395947973d6de SHA256 29b159cff43418c13ead998928d4966c738707e986d99ad3b7d9e0203de65e18
+DIST libbonoboui-2.24.1.tar.bz2 988420 RMD160 6bea00e7ebe4f8601c9bc69e4c8008543064fed0 SHA1 30373b904003c9c20cd19510b05a6c388b3f8b82 SHA256 322536bdc23a70287f229168af2538a7b36c1b5041626ba15e22902228750c29
+EBUILD libbonoboui-2.20.0.ebuild 1126 RMD160 dbaa9d58bcc60c3c587f3aa94d24205fc2ba7073 SHA1 930775d17b87fff46b4544612aac0f03c2098973 SHA256 ab1c3e4c15938097481a7f45152d2db233885ea3472c6ed2eedee305b37f597f
 EBUILD libbonoboui-2.22.0.ebuild 1129 RMD160 c087781af60a10e72f4a7a9df0eae01dec536fdd SHA1 7d8c838de9ea1907f75f3e999f6071afd7100d37 SHA256 86d889924d8b10b0c2a12797ee51f3d42aac347f769c8a20fecea528b63bdda6
 EBUILD libbonoboui-2.24.0.ebuild 1114 RMD160 be22b4cd6fe421216d0c50598f7385ea029a2309 SHA1 c303c7457b553a2959c4180eb1e48d9894c7f06e SHA256 d3b41a85678d81e7f7e98d1022f7fbac2c18acb7eeedb949417fdadced1c3f9c
-MISC ChangeLog 19180 RMD160 f09c62429361f5a9e9b8dc878a05f44c2c415db5 SHA1 e2830a75e569af65a3c26b5b27607b7136cadd46 SHA256 55e8893b95cf68a6962fe1105fdf6f656c3c75d952c74b3251876548c4fc7265
+EBUILD libbonoboui-2.24.1.ebuild 1144 RMD160 63c1612549ef647adb169b46a1fc5946a0121c7c SHA1 b974f65580df778db7e90950334f9c7a7a6edd3d SHA256 24b14409adea874ca923fa0cc8136f781398a925a0931303bea7718760f85a40
+MISC ChangeLog 19434 RMD160 5e54a9501a0b168bf000e0a8aa0a84dab35fd1ef SHA1 ac1282f50857d990e1bd74c7eafcb2fbe28dba3b SHA256 53b4d427fe8c3dfcd227d3dd9f12ae6a071407ea3116ea2c2a8774fb1387f14e
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
