@@ -1,6 +1,13 @@
 # ChangeLog for gnome-base/libbonoboui
 # Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.168 2009/03/06 15:36:47 ranger Exp $
+# $Header: /var/cvsroot/gentoo-x86/gnome-base/libbonoboui/ChangeLog,v 1.169 2009/03/08 01:39:47 eva Exp $
+
+*libbonoboui-2.24.1 (08 Mar 2009)
+
+  08 Mar 2009; Gilles Dartiguelongue <eva@gentoo.org>
+  libbonoboui-2.20.0.ebuild, +libbonoboui-2.24.1.ebuild:
+  Bump to 2.24.1. Build with single includes, remove use deprecated of
+  deprecated API, translation updates.
 
   06 Mar 2009; Brent Baude <ranger@gentoo.org> libbonoboui-2.24.0.ebuild:
   Marking libbonoboui-2.24.0 ppc stable for bug 260063
